# FerrumOS

./: .gitignore  Cargo.toml  GNUmakefile  README.md  limine.cfg  log.term  log_file_modif.sh  x86_64-ferrum_os.json
.cargo/: config.toml
drivers/: Cargo.toml
drivers/src/: lib.rs
drivers/src/vga/: mod.rs
interrupts/: Cargo.toml
interrupts/src/: handlers.rs  lib.rs
io/: Cargo.toml
iso_root/: kernel.elf
kernel/: Cargo.toml  GNUmakefile  build.rs
kernel/src/: lib.rs  main.rs
kernel/src/allocator/: dummy.rs  linked_list.rs  mod.rs
kernel/src/drivers/: mod.rs
kernel/src/drivers/acpi/: hpet.rs  madt.rs  mod.rs  rsdp.rs  rsdt.rs
kernel/src/drivers/apic/: io_apic.rs  local_apic.rs  mod.rs
kernel/src/drivers/ata/: mod.rs  mod_old.rs
kernel/src/drivers/fonts/: mod.rs
kernel/src/drivers/fonts/ansii_parser/: ansii_builder.rs  mod.rs
kernel/src/drivers/fonts/color/: mod.rs
kernel/src/drivers/fonts/psf_font/: glyph.rs  mod.rs
kernel/src/drivers/fonts/text_writer/: bub_tw.rs  mod.rs  tdf_tw.rs
kernel/src/drivers/framebuffer/: mod.rs
kernel/src/drivers/vga/: colors.rs  mod.rs  tests.rs
kernel/src/fs/ext2/: bgdt.rs  file.rs  inode.rs  mod.rs  mod_old.rs  superblock.rs  superblock_data_types.rs
kernel/src/gdt/: mod.rs
kernel/src/interrupts/: handlers.rs  mod.rs  tests.rs
kernel/src/io/: serial.rs
kernel/src/macros/: mod.rs
kernel/src/memory/: mod.rs
kernel/src/shell/: cat.rs  clear.rs  echo.rs  help.rs  input_dispatcher.rs  ls.rs  manual_builder.rs  mkdir.rs  mod.rs  rm.rs  touch.rs  write.rs
kernel/src/shell/commands/: cat.rs  clear.rs  cp437.rs  echo.rs  exec.rs  help.rs  kill.rs  ls.rs  mkdir.rs  mod.rs  ps.rs  rm.rs  touch.rs  write.rs
kernel/src/shell/ctw/: mod.rs
kernel/src/task/: demo_task.rs  executor.rs  keyboard.rs  mod.rs  simple_executor.rs
kernel/src/timer/: mod.rs
kernel/src/timer/hpet/: mod.rs
kernel/src/timer/lapic/: mod copy.rs  mod.rs
kernel/src/timer/pit/: mod.rs  pit_config.rs
kernel/src/utils/: cpuid.rs  custom_types.rs  mod.rs  msr.rs  panic_module.rs  registers.rs  test_utils.rs
kernel/src/utils/custom_types/: mut_u8_ptr.rs
kernel/src/utils/port/: mod.rs
src/: lib.rs  main.rs  tests.rs
src/allocator/: bump.rs  fixed_size_block.rs  linked_list.rs  mod.rs
src/drivers/: mod.rs
src/drivers/vga/: colors.rs  mod.rs  tests.rs
src/gdt/: mod.rs
src/interrupts/: handlers.rs  mod.rs
src/io/: mod.rs  serial.rs
src/memory/: mod.rs
src/task/: executor.rs  keyboard.rs  mod.rs  simple_executor.rs
src/utils/: mod.rs  panic_module.rs  test_utils.rs
tests/: Cargo.toml  basic_boot.rs  heap_allocation.rs  stack_overflow.rs
tests/src/: main.rs
tests/src/drivers_/: vga.rs
utils/: Cargo.toml
utils/src/: lib.rs  panic_module.rs  test_utils.rs
