[package]
name = "ferrum_os"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
volatile = "0.2.6"
spin = "0.9.8"
x86_64 = "0.15.1"
uart_16550 = "0.3.1"
bootloader = { version = "0.9", features = ["map_physical_memory"] }
pic8259 = "0.11.0"
linked_list_allocator = "0.10.5"
pc-keyboard = "0.7.0"
ansi_rgb = "0.2.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
run-args = [
    "-serial",
    "stdio",
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-display",
    "sdl",
]
test-success-exit-code = 33

[[test]]
name = "stack_overflow"
harness = false
