[package]
name = "ferrum_os"
version = "0.1.0"
edition = "2021"

[dependencies]
limine = "0.2"
spin = "0.9"
x86_64 = "0.15.1"
ansi_rgb = "0.2.0"
volatile = "0.2.6"
uart_16550 = "0.3.1"
linked_list_allocator = "0.10.5"
pic8259 = "0.11.0"
pc-keyboard = "0.7.0"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[dependencies.crossbeam-queue]
version = "0.3.11"
default-features = false
features = ["alloc"]

[dependencies.conquer-once]
version = "0.4.0"
default-features = false

[dependencies.futures-util]
version = "0.3.4"
default-features = false
features = ["alloc"]

[features]
debug = []
