[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]

drivers = { path = "../drivers" }
utils = { path = "../utils", features = ["testing"] }
io = { path = "../io" }
bootloader = "0.9"
#test
uart_16550 = "0.2.0"
#end test
volatile = "0.2.6"
spin = "0.5.2"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

# Necessary for running test
# May be modified later
[package.metadata.bootimage]
test-args = [
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-serial",
    "stdio",
    "-display",
    "none",
]
run-args = [
    "-serial",
    "stdio",
    "-device",
    "isa-debug-exit,iobase=0xf4,iosize=0x04",
    "-display",
    "sdl",
]
test-success-exit-code = 33
